# bio_news_ai

./: .gitignore  CHANGELOG.md  README.md  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: buildimage
web_condenser_ai/: __main__.py  __version__.py  app.py
web_condenser_ai/components/gmail_login_btn/: __init__.py
web_condenser_ai/components/gmail_login_btn/public/: index.html
web_condenser_ai/prompts/: industrial_analyst.py  sys.py
web_condenser_ai/tools/: degest.py  selenium_url_loader.py
web_condenser_ai/utils/: _logger.py  _utils.py  conf.py  html_snippets.py  keys.py
